--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,12 @@
 /node_modules
 /.pnp
 .pnp.js
-
 # testing
 /coverage
 
 # production
 /build
-
+/public
 # misc
 .DS_Store
 .env.local
@@ -21,3 +20,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.*
